# markua-indexing

./: .gitignore  README.md  pyproject.toml
dictionaries/: NLTKStopWords.txt  Notes.md  README.md  ef_edu.txt  ordinary.txt  phrases.txt
index_words/: index_words.txt
src/data/: index_words.txt
src/markua_indexing/: __init__.py  generate_index_word_list.py  markdown_doc.py  scoped_file.py  top_dir.py  util.py
src/markua_indexing/data/: Notes.md
tests/: test_markdown_doc.py  test_remove_fences.py  test_set_file.py
z_graveyard/src/: generate_index_word_list.py
z_graveyard/tests/: test_find_italicized_phrases.py  test_remove_fences.py  test_scoped_file.py
