[project]
name = "markua-indexing"
version = "0.1.0"
description = "Tools to help index Markua documents; see https://markua.com/"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
index_words = "markua_indexing.generate_index_word_list:main"
defence = "markua_indexing.generate_index_word_list:remove_fences_command_line"
